sumo/tests/sumo/output/e1/errors/freq_missing/errors.sumo
Error: Attribute 'freq' is missing in definition of e1Detector '4/1to3/1'.
Quitting (on error).
